--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <artifactId>season-parent</artifactId>
         <groupId>trs.com.cn</groupId>
-        <version>1.2</version>
+        <version>1.4-SNAPSHOT</version>
     </parent>
 
     <dependencies>
@@ -21,7 +21,6 @@
             <artifactId>season-core</artifactId>
         </dependency>
     </dependencies>
-
     <build>
         <finalName>SeasonTest</finalName>
         <plugins>
